# python-exercism

./: .gitignore  LICENSE  READMD.md  README.md  noxfile.py  pyproject.toml  requirements.txt  requirments.txt  tox.ini
.github/workflows/: tests.yml
src/: acronym.py  allergies.py  anagrams.py  armstrong_numbers.py  atbash_cipher.py  bob.py  clock.py  difference_of_squares.py  etl.py  flatten_array.py  gigasecond.py  grade_school.py  grains.py  hamming.py  high_scores.py  isbn_verifier.py  isogram.py  kindergarten_garden.py  largest_series_product.py  leap.py  luhn.py  markdown.py  matrix.py  meetup.py  pangram.py  pig_latin.py  prime_factors.py  raindrops.py  rest_api.py  rna_transcription.py  robot_simulator.py  roman_numerals.py  rotational_cipher.py  run_length_encoding.py  say.py  scrabble_score.py  series.py  sieve.py  simple_cipher.py  space_age.py  (+6 more)
tests/: acronym_test.py  allergies_test.py  anagrams_test.py  armstrong_numbers_test.py  atbash_cipher_test.py  bob_test.py  clock_test.py  difference_of_squares_test.py  etl_test.py  flatten_array_test.py  gigasecond_test.py  grade_school_test.py  grains_test.py  hello_world_test.py  high_scores_test.py  isbn_verifier_test.py  isogram_test.py  kindergarten_garden_test.py  largest_series_product_test.py  leap_test.py  luhn_test.py  markdown_test.py  matrix_test.py  meetup_test.py  pangram_test.py  pig_latin_test.py  prime_factors_test.py  raindrops_test.py  rest_api_test.py  reverse_string_test.py  rna_transcription_test.py  robot_simulator_test.py  roman_numerals_test.py  rotational_cipher_test.py  run_length_encoding_test.py  say_test.py  scrabble_score_test.py  series_test.py  sieve_test.py  simple_cipher_test.py  (+9 more)
