[project]
name = "python-exercism"
project_name = "python-exercism"
version = "0.1.0"
description = "Solutions to exercism exercises"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"

[[project.authors]]
name = "Roger Hughes"
email = "roger@roghu.com"

[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools >= 57.4.0", "wheel"]
build-backend = "setuptools.build_meta"
