[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Roger Hughes", email = "roger@roghu.com"},
]
dependencies = []
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[tool.black]
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = "__pypackages__/*"


[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest~=6.2",
    "pytest-cov~=2.12",
    "pytest-sugar~=0.9",
    "pytest-xdist~=2.3"]
lint = [
    "flake8~=3.9",
    "pytest-flake8~=1.0",
    "black~=21.7b0",
]
typing = [
    "mypy~=0.910",
    "pytest-mypy~=0.8",
]
dev = [
    "nox~=2021.6",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
